--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "server:prod": "http-server dist --cors",
     "server": "npm run server:dev",
     "start:hmr": "npm run server:dev:hmr",
-    "start": "npm run server:dev",
+    "start": "npm run server:prod",
     "tslint": "tslint",
     "typedoc": "typedoc",
     "version": "npm run build",
