testing with limited scrupts in package.js

--- a/package.json
+++ b/package.json
@@ -3,39 +3,8 @@
   "version": "3.6.0",
   "description": "MCSC Portal",
   "scripts": {
-    "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
-    "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --bail",
-    "build": "npm run build:dev",
-    "ci": "npm run lint && npm test && npm run e2e",
-    "clean:dist": "npm run rimraf -- dist",
-    "clean:install": "npm set progress=false && npm install",
-    "clean:start": "npm start",
-    "clean": "npm cache clean && npm run rimraf -- node_modules dist",
-    "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --github-dev",
-    "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --github-prod",
-    "lint": "npm run tslint \"src/**/*.ts\"",
-    "postversion": "git push && git push --tags",
-    "prebuild:dev": "npm run clean:dist",
-    "prebuild:prod": "npm run clean:dist",
-    "preclean:install": "npm run clean",
-    "preclean:start": "npm run clean",
-    "preversion": "npm test",
-    "rimraf": "rimraf",
-    "server:dev:hmr": "npm run server:dev -- --inline --hot",
-    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
-    "server:prod": "http-server dist --cors",
-    "server": "npm run server:dev",
-    "start:hmr": "npm run server:dev:hmr",
-    "tslint": "tslint",
-    "typedoc": "typedoc",
-    "version": "npm run build",
-    "watch:dev:hmr": "npm run watch:dev -- --hot",
-    "watch:dev": "npm run build:dev -- --watch",
-    "watch:prod": "npm run build:prod -- --watch",
-    "watch:test": "npm run test -- --auto-watch --no-single-run",
-    "watch": "npm run watch:dev",
     "webpack-dev-server": "webpack-dev-server",
-    "webpack": "webpack"
+    "webpack": "node_modules/.bin/webpack"
   },
   "dependencies": {
     "@angular/animations": "^4.0.1",
