--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "3.6.0",
   "description": "MCSC Portal",
   "scripts": {
+    "build": "npm run build:dev",
+    "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
+    "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --bail",
     "webpack-dev-server": "webpack-dev-server",
     "webpack": "node_modules/.bin/webpack"
   },
