--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "MCSC Portal",
   "scripts": {
     "build": "npm run build:dev",
-    "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
-    "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --bail",
+    "build:dev": "node_modules/.bin/webpack --config config/webpack.dev.js --progress --profile",
+    "build:prod": "node_modules/.bin/webpack --config config/webpack.prod.js  --progress --profile --bail",
     "webpack-dev-server": "webpack-dev-server",
     "webpack": "node_modules/.bin/webpack"
   },
