updated prod dependencies for webpack build

--- a/package.json
+++ b/package.json
@@ -3,11 +3,41 @@
   "version": "3.6.0",
   "description": "MCSC Portal",
   "scripts": {
+    "install": "napa",
+    "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
+    "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --bail",
     "build": "npm run build:dev",
-    "build:dev": "node_modules/.bin/webpack --config config/webpack.dev.js --progress --profile",
-    "build:prod": "node_modules/.bin/webpack --config config/webpack.prod.js  --progress --profile --bail",
+    "ci": "npm run lint && npm test && npm run e2e",
+    "clean:dist": "npm run rimraf -- dist",
+    "clean:install": "npm set progress=false && npm install",
+    "clean:start": "npm start",
+    "clean": "npm cache clean && npm run rimraf -- node_modules dist",
+    "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --github-dev",
+    "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --github-prod",
+    "lint": "npm run tslint \"src/**/*.ts\"",
+    "postversion": "git push && git push --tags",
+    "prebuild:dev": "npm run clean:dist",
+    "prebuild:prod": "npm run clean:dist",
+    "preclean:install": "npm run clean",
+    "preclean:start": "npm run clean",
+    "preversion": "npm test",
+    "rimraf": "rimraf",
+    "server:dev:hmr": "npm run server:dev -- --inline --hot",
+    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
+    "server:prod": "http-server dist --cors",
+    "server": "npm run server:dev",
+    "start:hmr": "npm run server:dev:hmr",
+    "start": "",
+    "tslint": "tslint",
+    "typedoc": "typedoc",
+    "version": "npm run build",
+    "watch:dev:hmr": "npm run watch:dev -- --hot",
+    "watch:dev": "npm run build:dev -- --watch",
+    "watch:prod": "npm run build:prod -- --watch",
+    "watch:test": "npm run test -- --auto-watch --no-single-run",
+    "watch": "npm run watch:dev",
     "webpack-dev-server": "webpack-dev-server",
-    "webpack": "node_modules/.bin/webpack"
+    "webpack": "webpack"
   },
   "dependencies": {
     "@angular/animations": "^4.0.1",
@@ -78,22 +108,6 @@
     "webpack-raphael": "2.1.4",
     "widgster": "0.0.3",
     "zone.js": "0.7.4",
-    "webpack": "2.2.0-rc.2",
-    "webpack-md5-hash": "0.0.5",
-    "webpack-merge": "1.0.1"    
-  },
-  "napa": {
-    "bootstrap-application-wizard": "git://github.com/amoffat/bootstrap-application-wizard.git#3768da3142f43428c5f63284407a2481a9e283d3",
-    "twitter-bootstrap-wizard": "git://github.com/VinceG/twitter-bootstrap-wizard.git#62a9aca8cc61fdb496c4bf7b92e1ff70c698667e",
-    "jvectormap-world": "http://jvectormap.com/js/jquery-jvectormap-world-mill-en.js",
-    "bootstrap_calendar": "https://github.com/xero/bootstrap_calendar.git#1.0.1",
-    "jquery.nestable": "https://github.com/dbushell/Nestable.git#4f93032cfafe2002f24ed6bd7dc1510931498503",
-    "jquery.flot.animator": "https://github.com/Codicode/flotanimator.git#3c256c0183d713fd3bf41d04417873928eb1a751",
-    "flot-orderBars": "https://github.com/emmerich/flot-orderBars.git#98081459571f60f7d95cc79a848c4f558d077486",
-    "jQuery-Mapael": "https://github.com/neveldo/jQuery-Mapael.git#0.7.1",
-    "skycons": "https://github.com/darkskyapp/skycons.git#7095ecf5f653dbcadbddb0d317b42e65fe091eae"
-  },
-  "devDependencies": {
     "@angular/compiler-cli": "2.4.1",
     "@types/hammerjs": "2.0.33",
     "@types/node": "6.0.38",
@@ -131,9 +145,24 @@
     "tslint": "3.15.1",
     "tslint-loader": "2.1.5",
     "typedoc": "0.5.0",
-    "typescript": "2.0.10",
     "url-loader": "0.5.7",
     "v8-lazy-parse-webpack-plugin": "0.3.0",
+    "webpack": "2.2.0-rc.2",
+    "webpack-md5-hash": "0.0.5",
+    "webpack-merge": "1.0.1"    
+  },
+  "napa": {
+    "bootstrap-application-wizard": "git://github.com/amoffat/bootstrap-application-wizard.git#3768da3142f43428c5f63284407a2481a9e283d3",
+    "twitter-bootstrap-wizard": "git://github.com/VinceG/twitter-bootstrap-wizard.git#62a9aca8cc61fdb496c4bf7b92e1ff70c698667e",
+    "jvectormap-world": "http://jvectormap.com/js/jquery-jvectormap-world-mill-en.js",
+    "bootstrap_calendar": "https://github.com/xero/bootstrap_calendar.git#1.0.1",
+    "jquery.nestable": "https://github.com/dbushell/Nestable.git#4f93032cfafe2002f24ed6bd7dc1510931498503",
+    "jquery.flot.animator": "https://github.com/Codicode/flotanimator.git#3c256c0183d713fd3bf41d04417873928eb1a751",
+    "flot-orderBars": "https://github.com/emmerich/flot-orderBars.git#98081459571f60f7d95cc79a848c4f558d077486",
+    "jQuery-Mapael": "https://github.com/neveldo/jQuery-Mapael.git#0.7.1",
+    "skycons": "https://github.com/darkskyapp/skycons.git#7095ecf5f653dbcadbddb0d317b42e65fe091eae"
+  },
+  "devDependencies": {
     "webpack-dev-middleware": "1.6.1",
     "webpack-dev-server": "2.2.0-rc.0"
   },
